# example-1

./: .flake8  .gitignore  docker-compose.yml
movies_auth/: Dockerfile  pyproject.toml
movies_auth/src/: entrypoint.sh  main.py  openapi.yaml
movies_auth/src/api/v1/: auth.py  auth_history.py  oauth.py  permission.py  refresh_token.py  role.py  user.py
movies_auth/src/app/: commands.py  flask_app.py
movies_auth/src/cache/: instance.py  redis.py  store.py
movies_auth/src/core/: config.py  const.py  logger.py
movies_auth/src/migrations/versions/: bead56e45145_init.py
movies_auth/src/models/: auth_history.py  permission.py  role.py  social_account.py  user.py  user_agent.py
movies_auth/src/services/: exceptions.py  oauth_base.py  oauth_providers.py
movies_auth/src/utils/: api_utils.py  authenticate.py  backoff.py  partition_auth_history.py  rate_limit.py
movies_auth/tests/functional/: conftest.py  docker-compose.yml  settings.py
movies_auth/tests/functional/src/: test_auth.py  test_auth_history.py  test_permission.py  test_refresh_token.py  test_role.py  test_user.py
movies_auth/tests/functional/utils/: wait_for_postgres.py  wait_for_redis.py
